@@ -3,7 +3,13 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 1.3.7
 ========================
-
+ -- Add jobid/stepid to MESSAGE_TASK_EXIT to address race condition when 
+    a job step is cancelled, another is started immediately (before the 
+    first one completely terminates) and ports are reused. 
+    NOTE: This change requires that SLURM be updated on all nodes of the
+    cluster at the same time. There will be no impact upon currently running
+    jobs (they will ignore the jobid/stepid at the end of the message).
+ 
 * Changes in SLURM 1.3.6
 ========================
  -- Add new function to get information for a single job rather than always
